add, remove and view cart functionality done
